--- a/control/control
+++ b/control/control
@@ -1,5 +1,5 @@
 Package: enigma2-plugin-skins-ax-blue-fhd-4atv
-Version: 2.8
+Version: 2.9
 Section: base
 OE: Enigma2 Skin
 License: open
@@ -7,6 +7,6 @@ Priority: optional
 Architecture: all
 Maintainer: stein17
 Description: Skin Full HD for ATV Images by stein17
-Source: https://axforum.de/
-Homepage: https://axforum.de/
+Source: https://www.opena.tv/forum133/
+Homepage: https://www.opena.tv/
 
